# qi-v2-agent

./: .gitignore  CLAUDE.md  CONTINUATION_INSTRUCTIONS.md  README.implementation.md  README.md  VERSION.md  biome.json  build.ts  debug-cli.js  debug-readline.js  manual-test.md  package-lock.json  package.json  qicore-knowledge.md  quick-test-mcp.js  test-blessed-basic.js  test-file-workflow.js  test-ink.js  test-python-mcp.js  test-tui-manual.js  test-tui-response.js  test-tui-simple.js  test-tui.js  test_file.txt  tsconfig.build.json  tsconfig.json  version.md
.claude/: qicore-file-patterns.md
.claude-sessions/: 48187753-2130-4a6b-a202-531fb9efd02d.json  4ade6c9e-d504-44a0-9fc7-de1471d3711d.json  4ea01641-13d1-41d2-b971-9308e9a8753b.json  e379338e-14e8-49ad-bda0-e96458c86755.json
app/: ARCHITECTURE_SUMMARY.md  bunfig.toml  context-aware-preliminary-analysis.md  create-balanced-50-corrected.js  debug-langchain.ts  debug-truncation-issue.ts  demo-method-comparison.ts  package.json  test-classifier-debug.ts  test-classifier-simple.ts  test-context-schema.ts  test-full-system.ts  test-model-comparison.ts  test-ollama-native.js  test-ollama-structured-wrapper.ts  test-workflow-extractor-simple.ts  test-workflow-extractor.ts  tsconfig.json  vitest.config.ts
app/docs/: README.md
app/src/fine-tuning/: README.md  generate_data.py  pyproject.toml  setup.py  setup_uv.py  train.py
config/: .env.template  llm-providers.schema.json  llm-providers.yaml  qi-config.yaml  qi-prompt.schema.json  qi-prompt.yaml
docs/: CLAUDE-CODE-ENHANCEMENTS.md  PROJECT-STRUCTURE.md  README.md  agent.impl.corrected.v2.md  api-reference.md  claude-code-integration-proposal.md  claude-integration-dual-route-proposal.md  claude-provider-compatibility.md  cli-specification.md  dependency.management.md  todo.md  workflow-race-condition-fixes.md
lib/: .gitignore  VERSION.md  package.json  test-qicore-runtime.js  tsconfig.json  tsup.config.ts  vitest.config.ts
python-langchain-mcp-server/: .gitignore  README.md  classification.py  requirements.txt  schemas.py  server.py
scripts/: claude-deepseek.sh  ollama-connect.sh  (+1 more)
(+945 files in other folders)
