[project]
name = "qi-smollm2-finetuning"
version = "0.1.0"
description = "SmolLM2-1.7B fine-tuning for three-type classification"
authors = [
    {name = "qi-v2-agent", email = "dev@qi-agent.com"}
]
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}

# Core dependencies for fine-tuning
dependencies = [
    # Core ML libraries
    "torch>=2.0.1",
    "torchvision>=0.15.0", 
    "torchaudio>=2.0.0",
    
    # Fine-tuning frameworks
    "unsloth[cu118]>=2024.1",
    "transformers>=4.36.0",
    "datasets>=2.16.0",
    "trl>=0.7.4",
    "peft>=0.7.1", 
    "accelerate>=0.24.1",
    
    # Training utilities
    "bitsandbytes>=0.41.0",
    "scipy>=1.10.0",
    "scikit-learn>=1.3.0",
    
    # Monitoring and logging
    "tensorboard>=2.14.0",
    "wandb>=0.16.0",
    
    # Data processing
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "jsonlines>=3.1.0",
    "pyyaml>=6.0",
    
    # Development utilities
    "tqdm>=4.65.0",
    "rich>=13.0.0",
]

[project.optional-dependencies]
# Development dependencies
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
    "mypy>=1.5.0",
]

# Alternative CUDA versions
cu121 = [
    "torch>=2.0.1+cu121",
    "torchvision>=0.15.0+cu121",
    "torchaudio>=2.0.0+cu121",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

# Python formatting and linting
[tool.black]
line-length = 88
target-version = ['py39', 'py310', 'py311']
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 88
multi_line_output = 3
include_trailing_comma = true

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

# Project URLs
[project.urls]
homepage = "https://github.com/qi-v2-agent"
repository = "https://github.com/qi-v2-agent/qi-v2-agent"
documentation = "https://github.com/qi-v2-agent/qi-v2-agent/tree/main/app/docs"